--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -24,7 +24,7 @@ The internal case is nominative, as the predicate \tit{matjan} `to eat' takes no
 The external case is nominative as well, as the predicate \tit{ga-dauþnan} `to die' also takes nominative subjects.
 The relative pronoun \tit{sa} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the internal and external case: the nominative.
 
-\exg. ei sa -ei þis matjai, ni gadauþnai\\
+\exg. ei \tbf{sa} \tbf{-ei} \tbf{þis} \tbf{matjai}, ni gadauþnai\\
 \ac{comp} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} -\ac{comp} \ac{dem}.\ac{sg}.\ac{m}.\ac{gen} eat.\ac{opt}.3\ac{sg}\scsub{[nom]} not die.\ac{opt}.3\ac{sg}\scsub{[nom]}\\
 `that the one, who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothic-nom-nom}
 
@@ -34,7 +34,7 @@ The internal case is accusative, as the predicate \tit{arman} `to pity' takes ac
 The external case is accusative as well, as the predicate \tit{ga-arman} `to pity' also takes accusative objects.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal and external case: the accusative.
 
-\exg. gaarma þan -ei arma\\
+\exg. gaarma \tbf{þan} \tbf{-ei} \tbf{arma}\\
  pity.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.1\ac{sg}\scsub{[acc]}\\
  `I pity him, whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc-rep}
 
@@ -43,7 +43,7 @@ The internal case is dative, as the predicate \tit{manwjan} `to prepare' takes d
 The external case is dative as well, as the predicate \tit{giban} `to give' also takes dative indirect objects.
 The relative pronoun \tit{þaim)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal and external case: the dative.
 
-\exg. nist mein du giban, alja þaim -ei manwiþ was\\
+\exg. nist mein du giban, alja \tbf{þaim} \tbf{-ei} \tbf{manwiþ} \tbf{was}\\
 {is not} 1\ac{sg}.\ac{poss}.\ac{nom} to give.\ac{inf}\scsub{[dat]} {except for} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} prepare.\ac{ptcp} be.\ac{pret}.3\ac{sg}\scsub{[dat]}\\
 `it is not mine to give except for to the one, for whom it was prepared'\flushfill{Gothic, \ac{mark} 10:49, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-dat}
 
