--- a/thesis.tex
+++ b/thesis.tex
@@ -71,18 +71,18 @@ thanks
 \mainmatter
 \setcounter{secnumdepth}{4}
 
-\include{introduction}
+% \include{introduction}
+%
+% \part{The case}\label{part:case-facts}
+% \include{recurring-pattern}
+% \include{case-decomposition}
 
-\part{The case}\label{part:case-facts}
-\include{recurring-pattern}
-\include{case-decomposition}
-
-\part{The base}\label{part:variation}
-\include{case-competition-typology}
+% \part{The base}\label{part:variation}
+% \include{case-competition-typology}
 \include{committee}
 
 \bookmarksetup{startatroot}
-\include{discussion}
+% \include{discussion}
 
 %%%%%
 \backmatter
