german lexical entries

--- a/committee.tex
+++ b/committee.tex
@@ -853,7 +853,7 @@ I give the lexical entries for the morphemes.
                 [\tsc{med}P
                     [\tsc{deix}\scsub{2}]
                     [\tsc{prox}P
-                        [\tsc{deix}\tsc{1}]
+                        [\tsc{deix}\scsub{1}]
                         [\tsc{ref} [\phantom{xxx}, roof]]
                     ]
                 ]
@@ -898,7 +898,7 @@ Now I show how the relative pronoun are built.
                           [\tsc{med}P
                               [\tsc{deix}\scsub{2}]
                               [\tsc{prox}P
-                                  [\tsc{deix}\tsc{1}]
+                                  [\tsc{deix}\scsub{1}]
                                   [\tsc{ref} [\phantom{xxx}, roof]]
                               ]
                           ]
@@ -956,7 +956,7 @@ Now I show how the relative pronoun are built.
                           [\tsc{med}P
                               [\tsc{deix}\scsub{2}]
                               [\tsc{prox}P
-                                [\tsc{deix}\tsc{1}]
+                                [\tsc{deix}\scsub{1}]
                                 [\tsc{ref} [\phantom{xxx}, roof]
                                 ]
                             ]
@@ -1003,7 +1003,7 @@ The functional sequence is this:
                                 [\tsc{med}P
                                     [\tsc{deix}\scsub{2}]
                                     [\tsc{prox}P
-                                        [\tsc{deix}\tsc{1}]
+                                        [\tsc{deix}\scsub{1}]
                                         [\tsc{ref} [\phantom{xxx}, roof]]
                                     ]
                                 ]
@@ -1019,7 +1019,7 @@ The functional sequence is this:
 
 The spellout algorithm is this.
 
-\\ex. \tbf{Spellout Algorithm:}\\
+\ex. \tbf{Spellout Algorithm:}\\
 Merge F and \label{ex:spellout}
  \a. Spell out FP.
  \b. If (a) fails, attempt movement of the spec of the complement of \tsc{f}, and retry (a).
@@ -1068,7 +1068,7 @@ Now I come back to the interaction between gender and case. For the neuter relat
           [\tsc{med}P
               [\tsc{deix}\scsub{2}]
               [\tsc{prox}P
-                  [\tsc{deix}\tsc{1}]
+                  [\tsc{deix}\scsub{1}]
                   [\tsc{ref} [\phantom{xxx}, roof]]
               ]
           ]
@@ -1141,7 +1141,7 @@ so the promximal and medial just never appears without the emphasizer
   [\tsc{med}P
       [\tsc{deix}\scsub{2}]
       [\tsc{prox}P
-          [\tsc{deix}\tsc{1}]
+          [\tsc{deix}\scsub{1}]
           [\tsc{ind}P
               [\tsc{ind}]
               [\tsc{masc}P
@@ -1172,7 +1172,7 @@ I show how the light heads are built.
       }
           [\tsc{deix}\scsub{2}]
           [\tsc{prox}P
-              [\tsc{deix}\tsc{1}]
+              [\tsc{deix}\scsub{1}]
               [\tsc{ind}P
                   [\tsc{ind}]
                   [\tsc{masc}P
@@ -1214,7 +1214,7 @@ I show how the light heads are built.
       }
           [\tsc{deix}\scsub{2}]
           [\tsc{prox}P
-              [\tsc{deix}\tsc{1}]
+              [\tsc{deix}\scsub{1}]
               [\tsc{ind}P
                   [\tsc{ind}]
                   [\tsc{masc}P
@@ -1284,7 +1284,7 @@ Both constituent of the light head are also a constituent within the relative pr
             }
                 [{\tsc{deix}\scsub{2}}]
                 [{\tsc{prox}P}
-                    [{\tsc{deix}\tsc{1}}]
+                    [{\tsc{deix}\scsub{1}}]
                     [{\tsc{ind}P}
                         [{\tsc{ind}}]
                         [{\tsc{masc}P}
@@ -1351,7 +1351,7 @@ Both constituent of the light head are also a constituent within the relative pr
                       }
                           [\tsc{deix}\scsub{2}]
                           [\tsc{prox}P
-                              [\tsc{deix}\tsc{1}]
+                              [\tsc{deix}\scsub{1}]
                               [\tsc{ind}P
                                   [\tsc{ind}]
                                   [\tsc{masc}P
@@ -1435,7 +1435,7 @@ Both constituent of the light head are also a constituent within the relative pr
             }
                 [{\tsc{deix}\scsub{2}}]
                 [{\tsc{prox}P}
-                    [{\tsc{deix}\tsc{1}}]
+                    [{\tsc{deix}\scsub{1}}]
                     [{\tsc{ind}P}
                         [{\tsc{ind}}]
                         [{\tsc{masc}P}
@@ -1502,7 +1502,7 @@ Both constituent of the light head are also a constituent within the relative pr
                     }
                         [\tsc{deix}\scsub{2}]
                         [\tsc{prox}P
-                            [\tsc{deix}\tsc{1}]
+                            [\tsc{deix}\scsub{1}]
                             [\tsc{ind}P
                                 [\tsc{ind}]
                                 [\tsc{masc}P
@@ -1602,7 +1602,7 @@ In sum, neither of the elements contains all constituents that the other element
             }
                 [{\tsc{deix}\scsub{2}}]
                 [{\tsc{prox}P}
-                    [{\tsc{deix}\tsc{1}}]
+                    [{\tsc{deix}\scsub{1}}]
                     [{\tsc{ind}P}
                         [{\tsc{ind}}]
                         [{\tsc{masc}P}
@@ -1673,7 +1673,7 @@ In sum, neither of the elements contains all constituents that the other element
                       }
                           [\tsc{deix}\scsub{2}]
                           [\tsc{prox}P
-                              [\tsc{deix}\tsc{1}]
+                              [\tsc{deix}\scsub{1}]
                               [\tsc{ind}P
                                   [\tsc{ind}]
                                   [\tsc{masc}P
@@ -2016,7 +2016,7 @@ German & \tsc{dem}\scsub{strong}  & \cellcolor{LG}\tsc{dem}\scsub{weak} & \cellc
               [\tsc{med}P
                   [\tsc{deix}\scsub{2}]
                   [\tsc{prox}P
-                      [\tsc{deix}\tsc{1}]
+                      [\tsc{deix}\scsub{1}]
                       [\tsc{ind}P
                           [\tsc{ind}]
                           [\tsc{masc}P
@@ -2072,7 +2072,7 @@ German & \tsc{dem}\scsub{strong}  & \cellcolor{LG}\tsc{dem}\scsub{weak} & \cellc
               [\tsc{med}P
                   [\tsc{deix}\scsub{2}]
                   [\tsc{prox}P
-                      [\tsc{deix}\tsc{1}]
+                      [\tsc{deix}\scsub{1}]
                       [\tsc{ind}P
                           [\tsc{ind}]
                           [\tsc{masc}P
@@ -2126,7 +2126,7 @@ German & \tsc{dem}\scsub{strong}  & \cellcolor{LG}\tsc{dem}\scsub{weak} & \cellc
               [\tsc{med}P
                   [\tsc{deix}\scsub{2}]
                   [\tsc{prox}P
-                      [\tsc{deix}\tsc{1}]
+                      [\tsc{deix}\scsub{1}]
                       [\tsc{ind}P
                           [\tsc{ind}]
                           [\tsc{masc}P
@@ -2183,7 +2183,7 @@ German & \tsc{dem}\scsub{strong}  & \cellcolor{LG}\tsc{dem}\scsub{weak} & \cellc
               [\tsc{med}P
                   [\tsc{deix}\scsub{2}]
                   [\tsc{prox}P
-                      [\tsc{deix}\tsc{1}]
+                      [\tsc{deix}\scsub{1}]
                       [\tsc{ind}P
                           [\tsc{ind}]
                           [\tsc{masc}P
