until internal-only

--- a/presentations/fenna-files-presentation/packages.sty
+++ b/presentations/fenna-files-presentation/packages.sty
@@ -33,5 +33,4 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 \newcommand{\flushfill}[1]{\hspace{\fill}\mbox{}\linebreak[0]\hspace*{\fill}(\mbox{#1})}%%%hfill on the next line if too long%%%
 % \renewenvironment{flushleft}{\raggedright}{}%make sure ex + gll also works
 
-%%%bibliography%%%
-\usepackage[backend=biber,style=authoryear,natbib=true]{biblatex}
+\usepackage[backend=biber,style=authoryear-comp,natbib=true,dashed=false,sorting=ynt]{biblatex}
