--- a/presentations/syntax-colloquium-30nov/syntax-colloquium.tex
+++ b/presentations/syntax-colloquium-30nov/syntax-colloquium.tex
@@ -2,7 +2,7 @@
 
 \usepackage{../fenna-files-presentation/packages}
 \usepackage{../fenna-files-presentation/commands}
-\addbibresource{fenna-files/references.bib}
+\addbibresource{../fenna-files-presentation/references.bib}
 
 \usepackage{multicol}
 
@@ -32,7 +32,7 @@
 \setbeamertemplate{footline}{}
 
 %gets rid of navigation symbols
-%\setbeamertemplate{navigation symbols}{}
+% \setbeamertemplate{navigation symbols}{}
 
 
 \addtobeamertemplate{navigation symbols}{}{%
@@ -62,82 +62,106 @@
 }
 \end{frame}
 
-% \section{Introduction}
-
 \begin{frame}{Introduction --- case}
 
 \exg. Der Lehrer mag den Schüler.\\
- the.\tsc{nom} teacher likes the.\tsc{acc} student\\
+ the.\tsc{nom} teacher likes the.\tsc{acc} pupil\\
  `The teacher likes the pupil.'\label{ex:german-case-1}
 
 \pause
 
 \exg. Der Schüler mag den Lehrer.\\
- the.\tsc{nom} student likes the.\tsc{acc} teacher\\
+ the.\tsc{nom} pupil likes the.\tsc{acc} teacher\\
  `The pupil likes the teacher.'\label{ex:german-case-2}
 
 \end{frame}
 
 
-\begin{frame}{Introduction --- (headless) relative clauses}
+\begin{frame}{Introduction --- case in relative clauses}
 
 \exg. Der Lehrer mag den Schüler, der nach draußen guckt.\\
-the.\tsc{nom} teacher likes the.\tsc{acc} student \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{nom} to outside looks\\
+the.\tsc{nom} teacher likes the.\tsc{acc} pupil \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{nom} to outside looks\\
 `The teacher likes the pupil that is looking outside.'\label{ex:german-relative-1}
 
 \pause
 
 \exg. Der Lehrer mag den Schüler, den er beim Versteckspiel sucht.\\
-the.\tsc{nom} teacher likes the.\tsc{acc} student \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} he {at the} {hide-and-seek game} searches\\
+the.\tsc{nom} teacher likes the.\tsc{acc} pupil \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} he {at the} {hide-and-seek game} searches\\
 `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:german-relative-2}
 
-\pause
+\end{frame}
 
-\exg. Der Lehrer mag, wen er beim Versteckspiel sucht.\\
-the.\tsc{nom} teacher likes \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} he {at the} {hide-and-seek game} searches\\
-`The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:german-relative-2}
+\begin{frame}{Introduction --- case in headless relative clauses}
+
+\exg. gaarma þan -ei arma\\
+ pity.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} -\tsc{comp} pity.\tsc{pres}.1\tsc{sg}\scsub{[acc]}\\
+ `I pity him whom I pity' \flushfill{Gothic, \tsc{rom} 9:15, adapted from \citep{harbert1978} {339}}\label{ex:gothic-acc-acc}
 
 \end{frame}
 
 \begin{frame}{Introduction --- case competition}
 
-\exg. gaarma þan -ei arma\\
- pity.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} -\tsc{comp} pity.\tsc{pres}.1\tsc{sg}\scsub{[acc]}\\
- `I pity him whom I pity' \flushfill{Gothic, \tsc{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
+\exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
+ \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} -\tsc{comp} love.\tsc{pres}.2\tsc{sg}.\scsub{[acc]} sick be.\tsc{pres}.3\tsc{sg}\scsub{[nom]}\\
+ `the one whom you love is sick' \flushfill{Gothic, \tsc{john} 11:3, adapted from citet{harbert1978}{342}}\label{ex:gothic-acc-nom}
 
 \pause
 
-\exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
- \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} -\tsc{comp} love.\tsc{pres}.2\tsc{sg}.\scsub{[acc]} sick be.\tsc{pres}.3\tsc{sg}\scsub{[nom]}\\
- `the one whom you love is sick' \flushfill{Gothic, \tsc{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
+\exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
+ and \tsc{rel}.\tsc{sg}.\tsc{n}.\tsc{acc} -\tsc{comp} be.\tsc{pres}.3\tsc{sg}\scsub{[nom]} from Laodicea 2\tsc{pl}.\tsc{nom} read.\scsub{[acc]}\\
+ `and you read the one which is from Laodicea' \flushfill{Gothic, \tsc{col} 4:16, adapted from citet{harbert1978}{357}}\label{ex:gothic-nom-acc}
+
+ \pause
+
+ \begin{itemize}
+   \item internal case
+   \item external case
+ \end{itemize}
+
+
+\end{frame}
+
+\begin{frame}{Two aspects}
+
+\begin{itemize}
+  \pause\item Which case wins the case competition?
+  \pause\item Is the winner of the case competition allowed to surface?
+\end{itemize}
 
 \end{frame}
 
 
+\begin{frame}{Which case wins the case competition?}
+
+\pause
+
+\tsc{nom} < \tsc{acc} < \tsc{dat}
+
+\end{frame}
 
 
-\begin{frame}{Matching cases}
+\begin{frame}{Gothic --- matching data}
 
 \exg. ei \tbf{sa} \tbf{-ei} \tbf{þis} \tbf{matjai}, ni gadauþnai\\
 \tsc{comp} \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{nom} -\tsc{comp} \tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{gen} eat.\tsc{opt}.3\tsc{sg}\scsub{[nom]} not die.\tsc{opt}.3\tsc{sg}\scsub{[nom]}\\
-`that the one, who eats of this may not die' \flushfill{Gothic, \tsc{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothic-nom-nom}
+`that the one, who eats of this may not die' \flushfill{Gothic, \tsc{john} 6:50, after citet{harbert1978}{337}}\label{ex:gothic-nom-nom}
 
 \pause
 
 \exg. gaarma \tbf{þan} \tbf{-ei} \tbf{arma}\\
  pity.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} -\tsc{comp} pity.1\tsc{sg}\scsub{[acc]}\\
- `I pity him, whom I pity' \flushfill{Gothic, \tsc{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc-rep}
+ `I pity him, whom I pity' \flushfill{Gothic, \tsc{rom} 9:15, after citet{harbert1978}{339}}\label{ex:gothic-acc-acc-rep}
 
 \pause
 
 \exg. nist mein du giban, alja \tbf{þaim} \tbf{-ei} \tbf{manwiþ} \tbf{was}\\
 {is not} 1\tsc{sg}.\tsc{poss}.\tsc{nom} to give.\tsc{inf}\scsub{[dat]} {except for} \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{dat} -\tsc{comp} prepare.\tsc{ptcp} be.\tsc{pret}.3\tsc{sg}\scsub{[dat]}\\
-`it is not mine to give except for to the one, for whom it was prepared'\flushfill{Gothic, \tsc{mark} 10:49, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-dat}
+`it is not mine to give except for to the one, for whom it was prepared'\flushfill{Gothic, \tsc{mark} 10:49, after citet{harbert1978}{339}}\label{ex:gothic-dat-dat}
 
 \end{frame}
 
 
-\begin{frame}{Gothic headless relatives (matching)}
+\begin{frame}{Gothic --- overview matching}
 
   \begin{table}
    \center
@@ -172,23 +196,23 @@ the.\tsc{nom} teacher likes \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} he {at the} {hi
 
 
 
-\begin{frame}{\tsc{nom} vs. \tsc{acc}}
+\begin{frame}{Gothic --- \tsc{nom} vs. \tsc{acc} data}
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
  \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} -\tsc{comp} love.\tsc{pres}.2\tsc{sg}.\scsub{[acc]} sick be.\tsc{pres}.3\tsc{sg}\scsub{[nom]}\\
- `the one whom you love is sick' \flushfill{Gothic, \tsc{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-nom-acc-rep}
+ `the one whom you love is sick' \flushfill{Gothic, \tsc{john} 11:3, adapted from citet{harbert1978}{342}}\label{ex:gothic-nom-acc-rep}
 
 \pause
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
  and \tsc{rel}.\tsc{sg}.\tsc{n}.\tsc{acc} -\tsc{comp} be.\tsc{pres}.3\tsc{sg}\scsub{[nom]} from Laodicea 2.\tsc{pl}.\tsc{nom} read.\scsub{[acc]}\\
- `and you read the one which is from Laodicea' \flushfill{Gothic, \tsc{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-acc-nom-rep}
+ `and you read the one which is from Laodicea' \flushfill{Gothic, \tsc{col} 4:16, adapted from citet{harbert1978}{357}}\label{ex:gothic-acc-nom-rep}
 
 
 \end{frame}
 
 
-\begin{frame}{Gothic headless relatives (\tsc{nom} --- \tsc{acc})}
+\begin{frame}{Gothic --- overview \tsc{nom} vs. \tsc{acc}}
 
   \begin{table}[H]
    \center
@@ -223,22 +247,22 @@ the.\tsc{nom} teacher likes \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} he {at the} {hi
 \end{frame}
 
 
-\begin{frame}{\tsc{nom} vs. \tsc{dat}}
+\begin{frame}{Gothic --- \tsc{nom} vs. \tsc{dat} data}
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
  but \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{dat} -\tsc{comp} little {forgive}.\tsc{pass}.\tsc{pres}.3\tsc{sg}\scsub{[dat]} little love.\scsub{[nom]}\\
- `but the one whom little is forgiven loves little' \flushfill{Gothic, \tsc{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-nom-dat}
+ `but the one whom little is forgiven loves little' \flushfill{Gothic, \tsc{luke} 7:47, adapted from citet{harbert1978}{342}}\label{ex:gothic-nom-dat}
 
 \pause
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
  \tsc{rel}.\tsc{pl}.\tsc{n}.\tsc{dat} -\tsc{comp} above be.\tsc{pres}.3\tsc{pl}\scsub{[nom]} {think about}.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]}\\
- `think about those which are above' \flushfill{Gothic, \tsc{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-nom}
+ `think about those which are above' \flushfill{Gothic, \tsc{col} 3:2, adapted from citet{harbert1978}{339}}\label{ex:gothic-dat-nom}
 
 \end{frame}
 
 
-\begin{frame}{Gothic headless relatives (\tsc{nom} --- \tsc{dat})}
+\begin{frame}{Gothic --- overview \tsc{nom} --- \tsc{dat}}
 
   \begin{table}[H]
    \center
@@ -272,11 +296,11 @@ the.\tsc{nom} teacher likes \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} he {at the} {hi
 \end{frame}
 
 
-\begin{frame}{\tsc{acc} vs. \tsc{dat}}
+\begin{frame}{Gothic --- \tsc{acc} vs. \tsc{dat} data}
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
 {pick up}.\tsc{pres}.\tsc{ptcp}\scsub{[acc]} on\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc{n}.\tsc{dat} -\tsc{comp} lie.\tsc{pret}.3\tsc{sg}\\
-`picking up that what he lay on' \flushfill{Gothic, \tsc{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat}
+`picking up that what he lay on' \flushfill{Gothic, \tsc{luke} 5:25, adapted from citet{harbert1978}{343}}\label{ex:gothic-acc-dat}
 
 \pause
 
@@ -288,7 +312,7 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 
 
 
-\begin{frame}{Gothic headless relatives (\tsc{acc} --- \tsc{dat})}
+\begin{frame}{Gothic --- overview \tsc{acc} --- \tsc{dat}}
 
   \begin{table}[H]
    \center
@@ -321,9 +345,62 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 \end{frame}
 
 
+\begin{frame}{Gothic: overview summary}
+
+  \begin{table}[H]
+    \center
+    \begin{tabular}{c|c|c|c}
+      \toprule
+      \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+             & [\tsc{nom}]
+             & [\tsc{acc}]
+             & [\tsc{dat}]
+             \\ \cmidrule{1-4}
+         [\tsc{nom}]
+             & \tsc{nom}
+             & \tsc{acc}
+             & \tsc{dat}
+             \\ \cmidrule{1-4}
+         [\tsc{acc}]
+             & \tsc{acc}
+             & \tsc{acc}
+             & \tsc{dat}
+             \\ \cmidrule{1-4}
+         [\tsc{dat}]
+             & \tsc{dat}
+             & \tsc{dat}
+             & \tsc{dat}
+             \\
+       \bottomrule
+    \end{tabular}
+  \end{table}
+
+\end{frame}
+
+\begin{frame}
+
+  Which case wins the case competition? \\
+  \tsc{nom} < \tsc{acc} < \tsc{dat}
+
+\end{frame}
+
+\begin{frame}{Is the winner of the case competition allowed to surface?}
+
+  \pause
+
+\begin{itemize}
+  \item The unrestricted type: the internal and the external case are allowed to surface when either of them wins the case competition\label{ex:int-ext}\pause
+  \item The internal-only type: only the internal case is allowed to surface when it wins the case competition\label{ex:int-only}\pause
+  \item The external-only type: only the external case is allowed to surface when it wins the case competition\label{ex:ext-only}\pause
+  \item The matching type: neither the internal case nor in the external case is allowed to surface when either of them wins the case competition\label{ex:matching}\pause
+\end{itemize}
+
+\end{frame}
 
 
-\begin{frame}{Internal and external case allowed}
+
+
+\begin{frame}{The unrestricted type}
 
   \begin{table}[H]
     \center
@@ -357,7 +434,7 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 \end{frame}
 
 
-\begin{frame}{Only internal case allowed}
+\begin{frame}{The internal-only type}
 
 \begin{table}[H]
   \center
@@ -391,7 +468,7 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 \end{frame}
 
 
-\begin{frame}{Only external case allowed}
+\begin{frame}{The external-only type}
 
 \begin{table}[H]
   \center
@@ -424,7 +501,8 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 
 \end{frame}
 
-\begin{frame}{Only matching allowed: Modern German}
+
+\begin{frame}{The matching type}
 
 \begin{table}[H]
   \center
@@ -458,28 +536,97 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 \end{frame}
 
 
-\begin{frame}{Modern German: matching}
+\begin{frame}{Gothic as the unrestricted type}
+
+  \begin{table}[H]
+    \center
+    \begin{tabular}{c|c|c|c}
+      \toprule
+      \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+             & [\tsc{nom}]
+             & [\tsc{acc}]
+             & [\tsc{dat}]
+             \\ \cmidrule{1-4}
+         [\tsc{nom}]
+             & \tsc{nom}
+             & \cellcolor{DG}\tsc{acc}
+             & \cellcolor{DG}\tsc{dat}
+             \\ \cmidrule{1-4}
+         [\tsc{acc}]
+             & \cellcolor{LG}\tsc{acc}
+             & \tsc{acc}
+             & \cellcolor{DG}\tsc{dat}
+             \\ \cmidrule{1-4}
+         [\tsc{dat}]
+             & \cellcolor{LG}\tsc{dat}
+             & \cellcolor{LG}\tsc{dat}
+             & \tsc{dat}
+             \\
+       \bottomrule
+    \end{tabular}
+      \label{tbl:case-competition-int-ext}
+  \end{table}
+
+\end{frame}
+
+
+
+\begin{frame}{Modern German as the internal-only type}
+
+\begin{table}[H]
+  \center
+  \begin{tabular}{c|c|c|c}
+    \toprule
+    \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+           & [\tsc{nom}]
+           & [\tsc{acc}]
+           & [\tsc{dat}]
+           \\ \cmidrule{1-4}
+       [\tsc{nom}]
+           & \tsc{nom}
+           & \cellcolor{DG}*
+           & \cellcolor{DG}*
+           \\ \cmidrule{1-4}
+       [\tsc{acc}]
+           & \cellcolor{LG}\tsc{acc}
+           & \tsc{acc}
+           & \cellcolor{DG}*
+           \\ \cmidrule{1-4}
+       [\tsc{dat}]
+           & \cellcolor{LG}\tsc{dat}
+           & \cellcolor{LG}\tsc{dat}
+           & \tsc{dat}
+           \\
+     \bottomrule
+  \end{tabular}
+    \label{tbl:case-competition-only-int}
+\end{table}
+
+\end{frame}
+
+
+\begin{frame}{Modern German --- matching data}
 
 \exg. Uns besucht, \tbf{wer} \tbf{Maria} \tbf{mag}.\\
  2\tsc{pl}.\tsc{acc} visit.\tsc{pres}.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{an}.\tsc{nom} Maria.\tsc{acc} like.\tsc{pres}.3\tsc{sg}\scsub{[nom]}\\
- `Who visits us likes Maria.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-nom}
+ `Who visits us likes Maria.' \flushfill{Modern German, adapted from citet{vogel2001}{343}}\label{ex:mg-nom-nom}
 
 \pause
 
 \exg. Ich {lade ein}, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
 1\tsc{sg}.\tsc{nom} invite.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{an}.\tsc{acc} Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}\\
-`I invite who Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-acc}
+`I invite who Maria also likes.' \flushfill{Modern German, adapted from citet{vogel2001}{344}}\label{ex:mg-acc-acc}
 
 \pause
 
 \exg. Ich folge, \tbf{wem} \tbf{immer} \tbf{ich} \tbf{vertraue}.\\
  1\tsc{sg}.\tsc{nom} folge.\tsc{pres}.1\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{an}.\tsc{dat} ever 1\tsc{sg}.\tsc{nom} vertraue.\tsc{pres}.3\tsc{sg}\scsub{[dat]}.\\
- `I follow whoever I trust.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{342}}\label{ex:mg-dat-dat}
+ `I follow whoever I trust.' \flushfill{Modern German, adapted from citet{vogel2001}{342}}\label{ex:mg-dat-dat}
 
 \end{frame}
 
 
-\begin{frame}{Modern German headless relatives (matching)}
+\begin{frame}{Modern German --- overview matching}
 
 \begin{table}[H]
  \center
@@ -513,33 +660,33 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 \end{frame}
 
 
-\begin{frame}{Modern German: \tsc{nom} vs. \tsc{acc}}
+\begin{frame}{Modern German --- \tsc{nom} vs. \tsc{acc} data}
 
 \exg. Uns besucht, \tbf{wen} \tbf{Maria} \tbf{mag}.\\
 2\tsc{pl}.\tsc{acc} visit.\tsc{pres}.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{an}.\tsc{acc} Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}\\
-`Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
+`Who visits us, Maria likes.' \flushfill{Modern German, adapted from citet{vogel2001}{343}}\label{ex:mg-nom-acc}
 
 \pause
 
 \exg. *Uns besucht, \tbf{wer} \tbf{Maria} \tbf{mag}.\\
 2\tsc{pl}.\tsc{acc} visit.\tsc{pres}.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{an}.\tsc{nom} Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}\\
-`Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-u}
+`Who visits us, Maria likes.' \flushfill{Modern German, adapted from citet{vogel2001}{343}}\label{ex:mg-nom-acc-u}
 
 \pause
 
 \exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
 1\tsc{sg}.\tsc{nom} invite.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{an}.\tsc{acc} 1\tsc{sg}.\tsc{dat} nice be.\tsc{pres}.3\tsc{sg}\scsub{[nom]}\\
-`I invite who I like.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom}
+`I invite who I like.' \flushfill{Modern German, adapted from citet{vogel2001}{344}}\label{ex:mg-acc-nom}
 
 \pause
 
 \exg. *Ich {lade ein}, wer \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
 1\tsc{sg}.\tsc{nom} invite.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{an}.\tsc{nom} 1\tsc{sg}.\tsc{dat} nice be.\tsc{pres}.3\tsc{sg}\scsub{[nom]}\\
-`I invite who I like.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-nom-u}
+`I invite who I like.' \flushfill{Modern German, adapted from citet{vogel2001}{344}}\label{ex:mg-acc-nom-u}
 
 \end{frame}
 
-\begin{frame}{Modern German headless relatives (\tsc{nom} --- \tsc{acc})}
+\begin{frame}{Modern German --- overview \tsc{nom} --- \tsc{acc}}
 
 \begin{table}[H]
   \center
@@ -572,33 +719,33 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 
 \end{frame}
 
-\begin{frame}{Modern German: \tsc{nom} vs. \tsc{dat}}
+\begin{frame}{Modern German --- \tsc{nom} vs. \tsc{dat} data}
 
 \exg. Uns besucht, \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
 2\tsc{pl}.\tsc{acc} visit.\tsc{pres}.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{an}.\tsc{dat} Maria.\tsc{nom} trust.\tsc{pres}.3\tsc{sg}\scsub{[dat]}\\
-`Who visits us, Maria trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
+`Who visits us, Maria trusts.' \flushfill{Modern German, adapted from citet{vogel2001}{343}}\label{ex:mg-nom-dat}
 
 \pause
 
 \exg. *Uns besucht, \tbf{wer} \tbf{Maria} \tbf{vertraut}.\\
 2\tsc{pl}.\tsc{acc} visit.\tsc{pres}.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{an}.\tsc{nom} Maria.\tsc{nom} trust.\tsc{pres}.3\tsc{sg}\scsub{[dat]}\\
-`Who visits us, Maria trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat-u}
+`Who visits us, Maria trusts.' \flushfill{Modern German, adapted from citet{vogel2001}{343}}\label{ex:mg-nom-dat-u}
 
 \pause
 
 \exg. *Ich vertraue, wem \tbf{Hitchcock} \tbf{mag}.\\
 1\tsc{sg}.\tsc{nom} trust.\tsc{pres}.1\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{an}.\tsc{dat} Hitchcock.\tsc{acc} like.\tsc{pres}.3\tsc{sg}\scsub{[nom]}\\
-`I trust who likes Hitchcock.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom}
+`I trust who likes Hitchcock.' \flushfill{Modern German, adapted from citet{vogel2001}{345}}\label{ex:mg-dat-nom}
 
 \pause
 
 \exg. *Ich vertraue, wer \tbf{Hitchcock} \tbf{mag}.\\
 1\tsc{sg}.\tsc{nom} trust.\tsc{pres}.1\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{an}.\tsc{nom} Hitchcock.\tsc{acc} like.\tsc{pres}.3\tsc{sg}\scsub{[nom]}\\
-`I trust who likes Hitchcock.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-nom-u}
+`I trust who likes Hitchcock.' \flushfill{Modern German, adapted from citet{vogel2001}{345}}\label{ex:mg-dat-nom-u}
 
 \end{frame}
 
-\begin{frame}{Modern German headless relatives (\tsc{nom} --- \tsc{dat})}
+\begin{frame}{Modern German --- overview \tsc{nom} --- \tsc{dat}}
 
   \begin{table}[H]
     \center
@@ -631,34 +778,34 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 
 \end{frame}
 
-\begin{frame}{Modern German: \tsc{acc} vs. \tsc{dat}}
+\begin{frame}{Modern German --- \tsc{acc} vs. \tsc{dat} data}
 
 \exg. Ich {lade ein}, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
 1\tsc{sg}.\tsc{nom} invite.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{an}.\tsc{dat} also Maria.\tsc{nom} trust.\tsc{pres}.3\tsc{sg}\scsub{[dat]}.\\
-`I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
+`I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from citet{vogel2001}{344}}\label{ex:mg-acc-dat}
 
 \pause
 
 \exg. *Ich {lade ein}, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
 1\tsc{sg}.\tsc{nom} invite.\tsc{pres}.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{an}.\tsc{acc} also Maria.\tsc{nom} trust.\tsc{pres}.3\tsc{sg}\scsub{[dat]}.\\
-`I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-u}
+`I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from citet{vogel2001}{344}}\label{ex:mg-acc-dat-u}
 
 \pause
 
 \exg. *Ich vertraue, wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
 1\tsc{sg}.\tsc{nom} trust.\tsc{pres}.1\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{an}.\tsc{dat} also Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}.\\
-`I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc}
+`I trust whoever Maria also likes.' \flushfill{Modern German, adapted from citet{vogel2001}{345}}\label{ex:mg-dat-acc}
 
 \pause
 
 \exg. *Ich vertraue, wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
 1\tsc{sg}.\tsc{nom} trust.\tsc{pres}.1\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{an}.\tsc{acc} also Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}.\\
-`I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-u}
+`I trust whoever Maria also likes.' \flushfill{Modern German, adapted from citet{vogel2001}{345}}\label{ex:mg-dat-acc-u}
 
 \end{frame}
 
 
-\begin{frame}{Modern German headless relatives (\tsc{acc} --- \tsc{dat})}
+\begin{frame}{Modern German --- overview \tsc{acc} --- \tsc{dat}}
 
   \begin{table}[H]
     \center
@@ -691,10 +838,24 @@ that believe.\tsc{opt}.\tsc{pres}.2\tsc{pl}\scsub{[dat]} \tsc{rel}.\tsc{sg}.\tsc
 
 \end{frame}
 
-\begin{frame}
-
-\printbibliography
+\begin{frame}{Polish as the matching type}
 
 \end{frame}
+
+\begin{frame}{Polish data and overview}
+
+\end{frame}
+
+give cases colors
+check boldfacing
+remove modern german cases
+add modern greek
+
+
+\begin{frame}{References}
+        \frametitle{References}
+        % \printbibliography
+\end{frame}
+
 
 \end{document}
